deployment/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: toy-app
  labels:
    name: toy-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: toy-app
  labels:
    app: backend-toy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-toy-app
  template:
    metadata:
      labels:
        app: backend-toy-app
    spec:
      containers:
        - name: backend
          image: ghcr.io/bryan-hoang/k8s-toyapp:backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: toy-app
spec:
  selector:
    app: backend-toy-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: toy-app
  labels:
    app: frontend-toy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-toy-app
  template:
    metadata:
      labels:
        app: frontend-toy-app
    spec:
      containers:
        - name: frontend
          image: ghcr.io/bryan-hoang/k8s-toyapp:frontend
          command: ['bash', '-c', 'python3 -m http.server 2>&1']
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: toy-app
spec:
  selector:
    app: frontend-toy-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toy-app-ingress
  namespace: toy-app
spec:
  rules:
    - host: hello.info
      http:
        paths:
          - pathType: Prefix
            path: '/api'
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
